// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Search Snapshots Renders a collapsed search bar 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus {
  background-color: #ffffff;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #e8ebed;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #dfe2e6;
}

.emotion-1:active span .wd-icon-fill,
.emotion-1:focus:active span .wd-icon-fill,
.emotion-1:hover:active span .wd-icon-fill,
.emotion-1:active span .wd-icon-accent,
.emotion-1:focus:active span .wd-icon-accent,
.emotion-1:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:hover {
  background-color: #e8ebed;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<button
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots Renders a search bar with a value 1`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: block;
}

.emotion-8:hover {
  cursor: pointer;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
  value="Hello World"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value="Hello World"
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value="Hello World"
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots Renders a search bar with a value 2`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: block;
}

.emotion-8:hover {
  cursor: pointer;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
  value="Hello World"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value="Hello World"
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value="Hello World"
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders autocomplete normal and collapsed: <Search /> with autocomplete 1`] = `
.emotion-17 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-6 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: #f0f1f2;
  color: #494949;
}

.emotion-6::-webkit-search-cancel-button {
  display: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-6::-moz-placeholder {
  color: #5e6a75;
}

.emotion-6:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-6::placeholder {
  color: #5e6a75;
}

.emotion-6:not([disabled]):focus,
.emotion-6:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-6:not([disabled]):focus::-webkit-input-placeholder,
.emotion-6:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-6:not([disabled]):focus::-moz-placeholder,
.emotion-6:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-6:not([disabled]):focus:-ms-input-placeholder,
.emotion-6:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-6:not([disabled]):focus::placeholder,
.emotion-6:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-6:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-9 {
  display: inline-block;
  z-index: 3;
}

.emotion-9 svg {
  display: block;
}

.emotion-9 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-9:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-9 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-9:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-9 .wd-icon-background {
  fill: transparent;
}

.emotion-9:hover .wd-icon-background {
  fill: transparent;
}

.emotion-10 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-10:hover {
  cursor: pointer;
}

.emotion-16 {
  background-color: #ffffff;
  border: 1px solid #ced3d9;
  border-radius: 3px;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.08);
  padding: 0px;
  position: absolute;
  z-index: 1;
  left: 0;
  top: 40px;
  border-radius: 0 0 3px 3px;
  background: #ffffff;
  border: none;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
}

.emotion-14 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-12 {
  padding: 0;
  margin: 8px 0;
}

<form
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="snap-listbox"
  className="emotion-17 emotion-18"
  onSubmit={[Function]}
  placeholder="Search"
  role="combobox"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <div
    aria-live="polite"
    className="emotion-2 emotion-3"
    role="status"
  >
    There is 1 suggestion.
  </div>
  <label
    className="emotion-2 emotion-5"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="snap-listbox"
    className="emotion-6 emotion-7"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-10 emotion-11"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-9"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <div
    aria-labelledby="snap-label"
    className="emotion-15 emotion-16"
    id="snap-listbox"
  >
    <div
      className="emotion-14"
    >
      <ul
        className="emotion-12 emotion-13"
        role="listbox"
      >
        <div
          aria-selected={false}
          id="snap-option-0"
          isFocused={false}
          onClick={[Function]}
          role="option"
        />
      </ul>
    </div>
  </div>
</form>
`;

exports[`Header Search Snapshots renders autocomplete normal and collapsed: <Search /> with autocomplete collapsed 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus {
  background-color: #ffffff;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #e8ebed;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #dfe2e6;
}

.emotion-1:active span .wd-icon-fill,
.emotion-1:focus:active span .wd-icon-fill,
.emotion-1:hover:active span .wd-icon-fill,
.emotion-1:active span .wd-icon-accent,
.emotion-1:focus:active span .wd-icon-accent,
.emotion-1:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:hover {
  background-color: #e8ebed;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<button
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with blue theme applied 1`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with blue theme applied 2`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with transparent theme applied 1`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with transparent theme applied 2`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1 .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:hover .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: rgba(0,0,0,0.2);
  color: #ffffff;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #ffffff;
}

.emotion-4::-moz-placeholder {
  color: #ffffff;
}

.emotion-4:-ms-input-placeholder {
  color: #ffffff;
}

.emotion-4::placeholder {
  color: #ffffff;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  background: #ffffff;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with white theme applied 1`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed search bars: <Search /> with white theme applied 2`] = `
.emotion-10 {
  position: relative;
  margin-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: inline-block;
  z-index: 3;
}

.emotion-1 svg {
  display: block;
}

.emotion-1 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-fill {
  fill: #7b858f;
}

.emotion-1 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1 .wd-icon-background {
  fill: transparent;
}

.emotion-1:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
  position: absolute;
  overflow: hidden;
  word-wrap: normal;
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.emotion-4 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px;
  padding-left: 40px;
  height: 40px;
  max-width: 480px;
  min-width: 120px;
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  z-index: 2;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4::-webkit-search-cancel-button {
  display: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  outline: none;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #0875e1;
  background: #f0f1f2;
  color: #494949;
}

.emotion-4:not([disabled]):focus::-webkit-input-placeholder,
.emotion-4:not([disabled]):active::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::-moz-placeholder,
.emotion-4:not([disabled]):active::-moz-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus:-ms-input-placeholder,
.emotion-4:not([disabled]):active:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):focus::placeholder,
.emotion-4:not([disabled]):active::placeholder {
  color: #5e6a75;
}

.emotion-4:not([disabled]):hover {
  background: #e8ebed;
}

.emotion-7 {
  display: inline-block;
  z-index: 3;
}

.emotion-7 svg {
  display: block;
}

.emotion-7 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-7 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-7:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-7 .wd-icon-background {
  fill: transparent;
}

.emotion-7:hover .wd-icon-background {
  fill: transparent;
}

.emotion-8 {
  border-radius: 24px;
  height: 24px;
  margin-left: -32px;
  margin-right: 8px;
  width: 24px;
  z-index: 3;
  display: none;
}

.emotion-8:hover {
  cursor: pointer;
}

<form
  className="emotion-10 emotion-11"
  onSubmit={[Function]}
  placeholder="Search"
>
  <span
    className="emotion-0 emotion-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
    style={
      Object {
        "left": "8px",
        "pointerEvents": "none",
        "position": "absolute",
        "top": "50%",
        "transform": "translateY(-50%)",
      }
    }
  />
  <label
    className="emotion-2 emotion-3"
    htmlFor="snap-label"
  >
    Search
  </label>
  <input
    className="emotion-4 emotion-5"
    id="snap-label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Search"
    role="search"
    type="search"
    value=""
  />
  <span
    aria-label="Reset Search Input"
    className="reset-input emotion-8 emotion-9"
    onClick={[Function]}
    value=""
  >
    <span
      className="emotion-0 emotion-7"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-x-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.783 12l-3.661 3.661a.414.414 0 0 0 .001.588l.628.628a.414.414 0 0 0 .588.001L12 13.217l3.661 3.661a.414.414 0 0 0 .588-.001l.628-.628a.414.414 0 0 0 .001-.588L13.217 12l3.661-3.661a.414.414 0 0 0-.001-.588l-.628-.628a.414.414 0 0 0-.588-.001L12 10.783 8.339 7.122a.414.414 0 0 0-.588.001l-.628.628a.414.414 0 0 0-.001.588L10.783 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</form>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with blue theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-1:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-1:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

<button
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with transparent theme applied 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-1:hover:focus {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: rgba(0,0,0,0.4);
}

.emotion-1:hover {
  background-color: rgba(0,0,0,0.2);
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: rgba(255,255,255,0.75);
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-sqg0p9 100ms;
  animation: animation-sqg0p9 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #ffffff;
}

<button
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;

exports[`Header Search Snapshots renders themed, collapsed search bars: <Search /> with white theme applied 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: transparent;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus {
  background-color: #ffffff;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #e8ebed;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #dfe2e6;
}

.emotion-1:active span .wd-icon-fill,
.emotion-1:focus:active span .wd-icon-fill,
.emotion-1:hover:active span .wd-icon-fill,
.emotion-1:active span .wd-icon-accent,
.emotion-1:focus:active span .wd-icon-accent,
.emotion-1:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:hover {
  background-color: #e8ebed;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: transparent;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<button
  className="emotion-1 emotion-2"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "marginLeft": "16px",
    }
  }
>
  <span
    className="emotion-0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-search wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.32 15.906l2.859 2.858a.5.5 0 0 1 .003.717l-.7.7a.5.5 0 0 1-.718-.002l-2.858-2.86a8 8 0 1 1 1.414-1.414zM11 17a6 6 0 1 0 0-12 6 6 0 0 0 0 12z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</button>
`;
